[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/level_selector.gd" type="Script" id=1]
[ext_resource path="res://images/level_editors/background.png" type="Texture" id=2]
[ext_resource path="res://images/level_editors/level_select.png" type="Texture" id=3]
[ext_resource path="res://images/level_editors/1.png" type="Texture" id=4]
[ext_resource path="res://images/level_editors/0.png" type="Texture" id=5]

[node name="level_selector" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="Sprite" type="Sprite" parent="Sprite"]

transform/pos = Vector2( 411.937, 231.607 )
transform/scale = Vector2( 1.61012, 1.03571 )
texture = ExtResource( 3 )

[node name="stage_1" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -196.0
margin/top = -83.0
margin/right = -156.0
margin/bottom = -43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[node name="stage_2" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -127.0
margin/top = -84.0
margin/right = -87.0
margin/bottom = -44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_3" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -60.0
margin/top = -85.0
margin/right = -20.0
margin/bottom = -45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_4" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = -84.0
margin/right = 47.0
margin/bottom = -44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_5" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 69.0
margin/top = -84.0
margin/right = 109.0
margin/bottom = -44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_6" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = -85.0
margin/right = 176.0
margin/bottom = -45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_7" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -192.0
margin/top = -14.0
margin/right = -152.0
margin/bottom = 26.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_8" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -128.0
margin/top = -16.0
margin/right = -90.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_9" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -61.0
margin/top = -18.0
margin/right = -21.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_10" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = -18.0
margin/right = 48.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_11" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = -18.0
margin/right = 110.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="stage_12" type="TextureButton" parent="Sprite/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 138.0
margin/top = -18.0
margin/right = 178.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[connection signal="pressed" from="Sprite/Sprite/stage_1" to="." method="_on_stage_1_pressed"]

[connection signal="pressed" from="Sprite/Sprite/stage_2" to="." method="_on_stage_2_pressed"]


